Moved external JS scripts to lib folder, moved map JS to a seperate file

--- a/hal-core/resource/resource/web/main_index.tmpl
+++ b/hal-core/resource/resource/web/main_index.tmpl
@@ -14,15 +14,15 @@
     <link href="css/c3.min.css" rel="stylesheet">
     <link href="css/hal.css" rel="stylesheet">
 
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-switch.min.js"></script>
-    <script src="js/moment.js"></script>
+    <script src="js/lib/jquery-1.11.3.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap-switch.min.js"></script>
+    <script src="js/lib/moment.js"></script>
     <script src="js/hal.js"></script>
 
     <!-- charts -->
-    <script src="js/d3.js"></script>
-    <script src="js/c3.js"></script>
+    <script src="js/lib/d3.js"></script>
+    <script src="js/lib/c3.js"></script>
 
 </head>
 
