--- a/plugins/hal-nvr/resource/resource/web/camera_detail.tmpl
+++ b/plugins/hal-nvr/resource/resource/web/camera_detail.tmpl
@@ -52,5 +52,5 @@
 </div>
 
 <link href="css/video-js.min.css" rel="stylesheet">
-<script src="js/video.min.js"></script>
-<script src="js/videojs-http-streaming.min.js"></script>
+<script src="js/lib/video.min.js"></script>
+<script src="js/lib/videojs-http-streaming.min.js"></script>
