--- a/plugins/hal-nvr/resource/resource/web/camera_monitor.tmpl
+++ b/plugins/hal-nvr/resource/resource/web/camera_monitor.tmpl
@@ -39,6 +39,6 @@
     </tr>
 </table>
 
-<link href="css/video-js.min.css" rel="stylesheet">
-<script src="js/video.min.js"></script>
-<script src="js/videojs-http-streaming.min.js"></script>
+<link href="css/lib/video-js.min.css" rel="stylesheet">
+<script src="js/lib/video.min.js"></script>
+<script src="js/lib/videojs-http-streaming.min.js"></script>
