Downgraded svg.js as many plugins did not support v3.x Now rooms can be moved and resized.

--- a/hal-core/resources/web/css/svg.select.css
+++ b/hal-core/resources/web/css/svg.select.css
@@ -1,24 +1,4 @@
-
-
-.selection_border {
-  fill: none;
-  stroke: black;
-  stroke-width:1;
-}
-
-.selection_handle_shear {
-  fill: white;
-  stroke: black;
-  stroke-width:1;
-}
-
-.selection_handle_rot {
-  fill: white;
-  stroke: black;
-  stroke-width:1;
-}
-
-/* .svg_select_points_lt{
+.svg_select_points_lt{
     cursor: nw-resize;
 }
 .svg_select_points_rt{
@@ -61,4 +41,4 @@
     stroke-opacity:0.8;
     fill-opacity:0.1;
     pointer-events:none; /* This ons is needed if you want to deselect or drag the shape*/
-/*} */
+}
