--- a/hal-core/resources/web/map.tmpl
+++ b/hal-core/resources/web/map.tmpl
@@ -13,7 +13,7 @@
 </style>
 
 <div class="col-sm-9 col-sm-offset-1 col-md-10 col-md-offset-1">
-    <svg id="map"></svg>
+    <svg id="map" width="100%" height="700" viewBox="0, 0, 1000, 700"></svg>
 </div>
 
 <div class="col-sm-1 col-md-1">
@@ -43,11 +43,12 @@
 </div>
 
 <link href="css/jquery.filer.css" rel="stylesheet">
-<link href="css/svg.select.min.js" rel="stylesheet">
+<link href="css/svg.select.min.css" rel="stylesheet">
 
 <script src="js/lib/jquery.filer.min.js"></script>
 <script src="js/lib/svg.min.js"></script>
 <script src="js/lib/svg.select.min.js"></script>
+<script src="js/lib/svg.resize.min.js"></script>
 <script src="js/lib/svg.draggable.min.js"></script>
 <script src="js/map.js"></script>
 
