Moved css into a lib folder for external code

--- a/hal-core/resources/web/main_index.tmpl
+++ b/hal-core/resources/web/main_index.tmpl
@@ -9,9 +9,9 @@
     <title>HAL</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-switch.min.css" rel="stylesheet">
-    <link href="css/c3.min.css" rel="stylesheet">
+    <link href="css/lib/bootstrap.min.css" rel="stylesheet">
+    <link href="css/lib/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="css/lib/c3.min.css" rel="stylesheet">
     <link href="css/hal.css" rel="stylesheet">
 
     <script src="js/lib/jquery-1.11.3.min.js"></script>
