--- a/hal-core/resources/web/map.tmpl
+++ b/hal-core/resources/web/map.tmpl
@@ -42,8 +42,8 @@
     </div>
 </div>
 
-<link href="css/jquery.filer.css" rel="stylesheet">
-<link href="css/svg.select.min.css" rel="stylesheet">
+<link href="css/lib/jquery.filer.css" rel="stylesheet">
+<link href="css/lib/svg.select.min.css" rel="stylesheet">
 
 <script src="js/lib/jquery.filer.min.js"></script>
 <script src="js/lib/svg.min.js"></script>
