--- a/hal-core/resources/web/startup.tmpl
+++ b/hal-core/resources/web/startup.tmpl
@@ -5,7 +5,7 @@
     <title>HAL is initializing...</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
     <link href="/css/hal.css" rel="stylesheet">
 </head>
 
