--- a/plugins/hal-nvr/resources/web/camera_detail.tmpl
+++ b/plugins/hal-nvr/resources/web/camera_detail.tmpl
@@ -51,6 +51,6 @@
     </div>
 </div>
 
-<link href="css/video-js.min.css" rel="stylesheet">
+<link href="css/lib/video-js.min.css" rel="stylesheet">
 <script src="js/lib/video.min.js"></script>
 <script src="js/lib/videojs-http-streaming.min.js"></script>
