Refactored alerts to be API based and not directly generated into the HTML

--- a/hal-core/resources/web/map.tmpl
+++ b/hal-core/resources/web/map.tmpl
@@ -50,7 +50,7 @@
 <script src="js/lib/svg.select.min.js"></script>
 <script src="js/lib/svg.resize.min.js"></script>
 <script src="js/lib/svg.draggable.min.js"></script>
-<script src="js/map.js"></script>
+<script src="js/hal_map.js"></script>
 
 
 <!------------------ MODALS ---------------------->
