--- a/hal-core/resources/web/main_index.tmpl
+++ b/hal-core/resources/web/main_index.tmpl
@@ -19,6 +19,7 @@
     <script src="js/lib/bootstrap-switch.min.js"></script>
     <script src="js/lib/moment.js"></script>
     <script src="js/hal.js"></script>
+    <script src="js/hal_alert.js"></script>
 
     <!-- charts -->
     <script src="js/lib/d3.js"></script>
@@ -37,7 +38,7 @@
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             {{/side_navigation}}
             {{^side_navigation}}<div class="main">{{/side_navigation}}
-                {{alerts}}
+                <div id="alert-container"></div>
                 {{content}}
             </div>
 
